Pull up revision 1.7 (requested by aymeric in ticket #496): . don't call newterm() more than once; use setterm() and resizeterm() instead   on subsequent calls. Newterm() would fail after a few calls, leading to vi   exiting with a "ex/vi: error initializing terminal" message . if tcsetattr() fails due to EINTR, ignore it Fixes PR #25849